<resources>
    <string name="app_name">Calorie Diary</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info_page">Info_Page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="Physical_Activity_Level_Array">
        <item>Stationary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Super Active</item>
    </string-array>

    <string-array name="Food_Options">
        <item>Calories</item>
        <item>Product Name</item>
        <item>Serving Size</item>
        <item>Total Fat</item>
        <item>Cholesterol</item>
        <item>Sodium</item>
        <item>Carbs</item>
        <item>Sugar</item>
        <item>Dietary Fiber</item>
        <item>Potassium</item>
        <item>Protein</item>
    </string-array>

    <string name="food_option_calories">Calories</string>
    <string name="food_option_product_name">Product Name</string>
    <string name="food_option_serving_size">Serving Size</string>
    <string name="food_option_total_fat">Total Fat</string>
    <string name="food_option_cholesterol">Cholesterol</string>
    <string name="food_option_sodium">Sodium</string>
    <string name="food_option_total_carbohydrate">Total Carbohydrate</string>
    <string name="food_option_sugar">Sugar</string>
    <string name="food_option_dietary_fiber">Dietary Fiber</string>
    <string name="food_option_potassium">Potassium</string>
    <string name="food_option_protein">Protein</string>



    <string name="Breakfast_Meal_Type">Breakfast</string>
    <string name="Lunch_Meal_Type">Lunch</string>
    <string name="Dinner_Meal_Type">Dinner</string>

    <string name="calories">Calories:</string>
    <string name="food_name">Product Name:</string>
    <string name="serving_size">Serving Size:</string>
    <string name="total_fat">Total Fat:</string>
    <string name="cholesterol">Cholesterol:</string>
    <string name="sodium">Sodium:</string>
    <string name="total_carbohydrate">Total Carbs:</string>
    <string name="sugars">Sugar:</string>
    <string name="dfiber">Dietary fiber:</string>
    <string name="potassium">Potassium:</string>
    <string name="protein">Protein:</string>
    <string name="search_text">Enter Food/Drink Name</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>

    <string name="API_Credits"> The Camera Features/ Text Search for foods and food Nutritional Values come from yjj781265`s Healthier App ad NutritionIX API.</string>
    <string name="title_activity_item_layout">item_layout</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_recyclerview">recyclerview</string>
</resources>